updating testing